# compose_mind

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  output.py  pyproject.toml  requirements.txt  state.py
agent/: __init__.py  loop.py  prompts.py  tools.py
docker/: __init__.py  compose.py  control.py  inspect.py
guardrails/: __init__.py  guard.py
history/: __init__.py  db.py
